GNOME Bugzilla – Bug 773412
tools: Better error checking when gdk/GL fails
Last modified: 2016-10-24 14:34:04 UTC
.
Created attachment 338330 [details] [review] tools: Better error checking when gdk/GL fails See https://bugzilla.redhat.com/show_bug.cgi?id=1387898
Review of attachment 338330 [details] [review]: ++
Attachment 338330 [details] pushed as 66b9e93 - tools: Better error checking when gdk/GL fails