tools: Better error checking when gdk/GL fails

See https://bugzilla.redhat.com/show_bug.cgi?id=1387898

https://bugzilla.gnome.org/show_bug.cgi?id=773412